# Nij.iCal

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py  run.sh  settings.py  test_tweet_for_date.sh  tweet.py  tweet.sh  tweet_calendar_update.py  tweet_calendar_update.sh  tweet_todays_events.py  tweet_todays_events.sh
.github/workflows/: tweet.yml  tweet_calendar_update.yml  tweet_todays_events.yml  update_calendars.yml
data/: events.csv  talents.csv  tickets.csv
docs/: _config.yml  calendar.css  calendar.html  calendar.js  index.md  index_en.md  map.html
docs/_includes/: head-custom.html
docs/css/: style.css
docs/data/: events.csv  talents.csv  tickets.csv
docs/en/: aadya.ics  achikita_chinami.ics  aia_amare.ics  aiba_uiha.ics  aizono_manami.ics  akabane_youko.ics  akagi_wen.ics  akira_ray.ics  alban_knox.ics  amagase_muyu.ics  amamiya_kokoro.ics  amemori_sayo.ics  amicia_michella.ics  ange_katrina.ics  ars_almal.ics  asahina_akane.ics  aster_arcadia.ics  asuka_hina.ics  axia_krone.ics  azuchi_momo.ics  azura_cecillia.ics  ban_hada.ics  belmond_banderas.ics  birthdays.ics  bonnivier_pranaja.ics  calendars.md  chae_ara.ics  claude_clawmark.ics  debidebi_debiru.ics  derem_kado.ics  dola.ics  doppio_dropscythe.ics  eli_conifer.ics  elira_pendora.ics  elu.ics  emma_august.ics  enna_alouette.ics  etna_crimson.ics  events.ics  ex_albio.ics  (+232 more)
docs/ja/: aadya.ics  achikita_chinami.ics  aia_amare.ics  aiba_uiha.ics  aizono_manami.ics  dola.ics  (+266 more)
misc/: logo.ai
nijical/: __init__.py  calendar.py  event.py  nijical.py  settings.py  talent.py  test.py  ticket.py
(+2 files in other folders)
