[project]
name = "nijical"
version = "1.0.0"
description = ""
authors = [
    {name = "magicien",email = "magicien.du.ballon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "arrow (>=1.3.0,<2.0.0)",
    "icalendar (>=6.1.1,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "twitter-text-parser (>=3.0.0,<4.0.0)",
    "setuptools (>=78.1.1)",
    "urllib3 (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
